deployment-helloworld.yaml
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: hello-rest
  namespace: hello-rest-test
  labels:
    app: hello-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-rest
  template:
    metadata:      
      labels:
        app: hello-rest
        deploymentconfig: hello-rest
    spec:
      containers:
        - name: hello-rest
          image: >-
            docker.io/therealthom/hello-rest:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
