service-helloworld.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-rest
  namespace: hello-rest-test
  labels:
    app: hello-rest  
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: hello-rest
    deploymentconfig: hello-rest
  type: ClusterIP
